# stacktrace

./: .clang-format  .clang-tidy  CMakeLists.txt  LICENSE  README.md  compat-cfg.json  compile_commands.json  gen_all.sh  gen_prebuilt.sh  main.cpp
.github/workflows/: cmake.yml
cmake/: stacktrace-config.cmake.in  stacktrace_config.cmake.in
examples/: main.cpp  signal.cpp
include/: code_position_exception.h  config.h.in  stacktrace.h  stacktrace_exception.h  stacktrace_fwd.h
include/detail/: common.h  demangler.h  libbacktrace_handle.h  stacktrace_backtrace_impl.h  stacktrace_execinfo_impl.h  stacktrace_libbfd_impl.h  stacktrace_windows_impl.h
include/detail/decode/: libbacktrace.h  libbfd.h  noop.h  winapi.h
include/detail/demangle/: cxxabi.h  noop.h
include/detail/iter/: libunwind.h
include/detail/stack/: execinfo.h  libbacktrace.h  libunwind.h  winapi.h
prebuilt/: execinfo_libbacktrace_cxxabi.h  execinfo_libbfd_cxxabi.h  execinfo_noop_cxxabi.h  libbacktrace_libbacktrace_cxxabi.h  libbacktrace_libbacktrace_noop.h  libbacktrace_libbfd_cxxabi.h  libbacktrace_noop_cxxabi.h  libbacktrace_noop_noop.h  libbacktrace_winapi_noop.h  libunwind_libbacktrace_cxxabi.h  libunwind_libbfd_cxxabi.h  libunwind_noop_cxxabi.h  libunwind_noop_noop.h  winapi_libbacktrace_noop.h  winapi_noop_noop.h  winapi_winapi_noop.h
source/: stacktrace.cpp
